{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 119,
  "lineage": "528285d2-fee2-7b07-0b67-c1c01d6374a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d86a47c25149e683",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-07d2c8a25d3f57981",
            "domain": "vpc",
            "id": "eipalloc-0d86a47c25149e683",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06f4da18b8bea5288",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-219-211-164.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.211.164",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sq_gateway",
            "aws_network_interface.sqnic",
            "aws_security_group.allow_web_sq",
            "aws_subnet.subnet_sq",
            "aws_vpc.sq_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sq-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0629230e074c580f2",
            "arn": "arn:aws:ec2:us-east-2:695346731277:instance/i-0e67b17506adb5c85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e67b17506adb5c85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sonarqube",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-06f4da18b8bea5288"
              }
            ],
            "primary_network_interface_id": "eni-06f4da18b8bea5288",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "18.219.211.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0250f126f29c76e78",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05812618289d95b3c",
            "tags": {
              "Name": "sqserver"
            },
            "tags_all": {
              "Name": "sqserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e7a484fac19deade"
            ]
          },
          "dependencies": [
            "aws_network_interface.sqnic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sq_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:695346731277:internet-gateway/igw-0052468d9a18f360a",
            "id": "igw-0052468d9a18f360a",
            "owner_id": "695346731277",
            "tags": {
              "Name": "sq_internet_gateway"
            },
            "tags_all": {
              "Name": "sq_internet_gateway"
            },
            "vpc_id": "vpc-05c1b05d1173cb6ae"
          },
          "dependencies": [
            "aws_vpc.sq_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sqnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:695346731277:network-interface/eni-06f4da18b8bea5288",
            "id": "eni-06f4da18b8bea5288",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:da:57:72:d7:7a",
            "owner_id": "695346731277",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e7a484fac19deade"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05812618289d95b3c"
          },
          "dependencies": [
            "aws_security_group.allow_web_sq",
            "aws_subnet.subnet_sq",
            "aws_vpc.sq_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sqroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0052468d9a18f360a",
            "id": "r-rtb-07469af3535a64f0d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07469af3535a64f0d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sq_gateway",
            "aws_route_table.sqrouttable",
            "aws_vpc.sq_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sqrouttable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:695346731277:route-table/rtb-07469af3535a64f0d",
            "id": "rtb-07469af3535a64f0d",
            "owner_id": "695346731277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0052468d9a18f360a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sqrouttable"
            },
            "tags_all": {
              "Name": "sqrouttable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c1b05d1173cb6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sq_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08268e6895566ac28",
            "route_table_id": "rtb-07469af3535a64f0d",
            "subnet_id": "subnet-05812618289d95b3c"
          },
          "dependencies": [
            "aws_route_table.sqrouttable",
            "aws_subnet.subnet_sq",
            "aws_vpc.sq_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_sq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:695346731277:security-group/sg-0e7a484fac19deade",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7a484fac19deade",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port9000",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "695346731277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c1b05d1173cb6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sq_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_sq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:695346731277:subnet/subnet-05812618289d95b3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05812618289d95b3c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "695346731277",
            "tags": {
              "Name": "subnet_sq"
            },
            "tags_all": {
              "Name": "subnet_sq"
            },
            "vpc_id": "vpc-05c1b05d1173cb6ae"
          },
          "dependencies": [
            "aws_vpc.sq_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sq_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:695346731277:vpc/vpc-05c1b05d1173cb6ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003123fca9c1474e1",
            "default_route_table_id": "rtb-0f6da79320f0ed0c9",
            "default_security_group_id": "sg-019d6da19f42bf032",
            "dhcp_options_id": "dopt-022ab92296524ade3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05c1b05d1173cb6ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f6da79320f0ed0c9",
            "owner_id": "695346731277",
            "tags": {
              "Name": "sq_vpc"
            },
            "tags_all": {
              "Name": "sq_vpc"
            }
          }
        }
      ]
    }
  ]
}